#1468 Single whitespace in driver properties are lost on application restart.   This fix required replacing outdated nanoxml library by standard Java XML functionality.